# tsw-controller-app

./: README.md
app/: .gitignore  Cargo.toml  Makefile  build.rs  vcpkg.json
app/.config/calibration/: xboxonecontroller.json
app/.config/profiles/: br_146.json  br_411_403.json  class350.json  emd_f125.json  m7a.json  m9.json  mp36.json  test.json
app/.config/sdl_mappings/: xboxonecontroller.json
app/config/calibration/: tca_quadrant_boeing.json
app/config/profiles/: 1972mk2tubestock.json  acs64.json  amfleet_cabcar.json  br_401.json  br_423_425.json  m3a.json  m7.json  njt_commuter_cab_car.json  rotem_bi_level.json  test.json
app/config/sdl_mappings/: tca_quadrant_boeing.json
app/src/: action_sequencer.rs  config_loader.rs  controller_manager.rs  direct_controller.rs  main.rs  profile_runner.rs  sync_controller.rs
app/src/commands/: mod.rs  run_calibration_mode.rs
app/src/config_defs/: controller_calibration.rs  controller_profile.rs  controller_sdl_map.rs  mod.rs  serde_sdl_guid.rs
beta.package/: PROFILE_EXPLAINER.md  README.md
tsw-controller-mod/socket-connection-lib/: Cargo.toml  build.rs  tsw_controller_mod_socket_connection.h
tsw-controller-mod/socket-connection-lib/src/: direct_controller_task.rs  lib.rs  (+1 more)
tsw-controller-mod/ue4ss-mod/: Makefile  README.md  dllmain.cpp  main
tsw5-gamepad-lua-socket-connection/: Cargo.toml  Makefile
tsw5-gamepad-lua-socket-connection/src/: direct_controller_task.rs  lib.rs  module.rs  sync_controller_task.rs
ue4ss-mod/Scripts/: ControlState.lua  Helpers.lua  SyncControlState.lua  controller.lua  main.lua
(+47 files in other folders)
