[package]
name = "tsw5_gamepad_lua_socket_connection"
version = "0.1.0"
edition = "2021"

[dependencies]
async-tungstenite = "0.28.2"
futures-util = "0.3.31"
mlua = { version = "0.10.3", features = [
  "lua54",
  "vendored",
  "send",
  "async",
  "serialize",
] }
once_cell = "1.20.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tungstenite = "0.26.1"

[lib]
name = "tsw5_gamepad_lua_socket_connection"
crate-type = ["cdylib"]
